--- a/templates/layerTool.hbs
+++ b/templates/layerTool.hbs
@@ -2,11 +2,12 @@
     <div class="form-group">
         <ol id="levels-list" class="directory-list"></ol>
     <div id="levels-ui-controls">
-        <i class="fas fa-users"></i>
-        <i class="fas fa-plus"></i>
-        <i class="far fa-edit"></i>
-        <i class="fas fa-map"></i>
-        <i class="fas fa-trash"></i>
+        <i class="fas fa-users" title="{{localize "levels.ui.players"}}"></i>
+        <i class="fas fa-plus" title="{{localize "levels.ui.addLevel"}}"></i>
+        <i class="far fa-edit" title="{{localize "levels.ui.editLevels"}}"></i>
+        <i class="fas fa-map" title="{{localize "levels.ui.getFromScene"}}"></i>
+        <i class="fas fa-trash" title="{{localize "levels.ui.clearLevels"}}"></i>
+        <i class="fas fa-bug" title="{{localize "levels.ui.debugScene"}}"></i>
     </div>
     </div>
     </div>
