--- a/templates/layerTool.hbs
+++ b/templates/layerTool.hbs
@@ -3,11 +3,12 @@
         <ol id="levels-list" class="directory-list"></ol>
     <div id="levels-ui-controls">
         <i class="fas fa-users" title="{{localize "levels.ui.players"}}"></i>
+        <i class="fas fa-archway" title="{{localize "levels.controls.levelsroof.name"}}"></i>
+        <i class="fas fa-tree" title="{{localize "levels.controls.placeOverhead.name"}}"></i>
         <i class="fas fa-plus" title="{{localize "levels.ui.addLevel"}}"></i>
         <i class="far fa-edit" title="{{localize "levels.ui.editLevels"}}"></i>
         <i class="fas fa-map" title="{{localize "levels.ui.getFromScene"}}"></i>
         <i class="fas fa-trash" title="{{localize "levels.ui.clearLevels"}}"></i>
-        <i class="fas fa-bug" title="{{localize "levels.ui.debugScene"}}"></i>
     </div>
     </div>
     </div>
