--- a/templates/layerTool.hbs
+++ b/templates/layerTool.hbs
@@ -3,6 +3,7 @@
         <ol id="levels-list" class="directory-list"></ol>
     <div id="levels-ui-controls">
         <i class="fas fa-users" title="{{localize "levels.ui.players"}}"></i>
+        <i class="fas fa-sort-amount-up-alt" title="{{localize "levels.ui.stair"}}"></i>
         <i class="fas fa-archway" title="{{localize "levels.controls.levelsroof.name"}}"></i>
         <i class="fas fa-tree" title="{{localize "levels.controls.placeOverhead.name"}}"></i>
         <i class="fas fa-plus" title="{{localize "levels.ui.addLevel"}}"></i>
