--- a/templates/layerTool.hbs
+++ b/templates/layerTool.hbs
@@ -2,14 +2,14 @@
     <div class="form-group">
         <ol id="levels-list" class="directory-list"></ol>
     <div id="levels-ui-controls">
-        <i class="fas fa-users" title="{{localize "levels.ui.players"}}"></i>
-        <i class="fas fa-sort-amount-up-alt" title="{{localize "levels.ui.stair"}}"></i>
-        <i class="fas fa-archway" title="{{localize "levels.controls.levelsroof.name"}}"></i>
-        <i class="fas fa-tree" title="{{localize "levels.controls.placeOverhead.name"}}"></i>
-        <i class="fas fa-plus" title="{{localize "levels.ui.addLevel"}}"></i>
-        <i class="far fa-edit" title="{{localize "levels.ui.editLevels"}}"></i>
-        <i class="fas fa-map" title="{{localize "levels.ui.getFromScene"}}"></i>
-        <i class="fas fa-trash" title="{{localize "levels.ui.clearLevels"}}"></i>
+        <i class="fas fa-users" data-tooltip="{{localize "levels.ui.players"}}"></i>
+        <i class="fas fa-sort-amount-up-alt" data-tooltip="{{localize "levels.ui.stair"}}"></i>
+        <i class="fas fa-archway" data-tooltip="{{localize "levels.controls.levelsroof.name"}}"></i>
+        <i class="fas fa-tree" data-tooltip="{{localize "levels.controls.placeOverhead.name"}}"></i>
+        <i class="fas fa-plus" data-tooltip="{{localize "levels.ui.addLevel"}}"></i>
+        <i class="far fa-edit" data-tooltip="{{localize "levels.ui.editLevels"}}"></i>
+        <i class="fas fa-map" data-tooltip="{{localize "levels.ui.getFromScene"}}"></i>
+        <i class="fas fa-trash" data-tooltip="{{localize "levels.ui.clearLevels"}}"></i>
     </div>
     </div>
     </div>
