--- a/templates/layerTool.hbs
+++ b/templates/layerTool.hbs
@@ -10,6 +10,7 @@
         <i class="far fa-edit" data-tooltip="{{localize "levels.ui.editLevels"}}"></i>
         <i class="fas fa-map" data-tooltip="{{localize "levels.ui.getFromScene"}}"></i>
         <i class="fas fa-trash" data-tooltip="{{localize "levels.ui.clearLevels"}}"></i>
+        {{#if lightMasking}} <i class="fas fa-circle-exclamation" style="color: var(--color-level-warning);" data-tooltip="{{localize "levels.ui.warning"}}"></i> {{/if}}
     </div>
     </div>
     </div>
