--- a/templates/layerTool.hbs
+++ b/templates/layerTool.hbs
@@ -7,6 +7,7 @@
         <i class="fas fa-sort-amount-up-alt" data-tooltip="{{localize "levels.ui.stair"}}"></i>
         <i class="fas fa-archway" data-tooltip="{{localize "levels.controls.levelsroof.name"}}"></i>
         <i class="fas fa-tree" data-tooltip="{{localize "levels.controls.placeOverhead.name"}}"></i>
+        <i class="fas fa-link" data-tooltip="{{localize "levels.ui.tokenAttacher"}}"></i>
         <i class="fas fa-plus" data-tooltip="{{localize "levels.ui.addLevel"}}"></i>
         <i class="far fa-edit" data-tooltip="{{localize "levels.ui.editLevels"}}"></i>
         <i class="fas fa-map" data-tooltip="{{localize "levels.ui.getFromScene"}}"></i>
