--- a/templates/layerTool.hbs
+++ b/templates/layerTool.hbs
@@ -4,7 +4,7 @@
     <div id="levels-ui-controls">
         {{#if lightMasking}} <i class="fas fa-circle-exclamation" style="color: var(--color-level-warning);" data-tooltip="{{localize "levels.ui.warning"}}"></i> {{/if}}
         <i class="fas fa-users" data-tooltip="{{localize "levels.ui.players"}}"></i>
-        <i class="fas fa-sort-amount-up-alt" data-tooltip="{{localize "levels.ui.stair"}}"></i>
+        <i class="fas fa-game-board" data-tooltip="{{localize "levels.ui.stair"}}"></i>
         <i class="fas fa-archway" data-tooltip="{{localize "levels.controls.levelsroof.name"}}"></i>
         <i class="fas fa-tree" data-tooltip="{{localize "levels.controls.placeOverhead.name"}}"></i>
         <i {{#unless isTA}}style="display: none;"{{/unless}} class="fas fa-link" data-tooltip="{{localize "levels.ui.tokenAttacher"}}"></i>
