--- a/templates/layerTool.hbs
+++ b/templates/layerTool.hbs
@@ -11,6 +11,7 @@
         <i class="fas fa-plus" data-tooltip="{{localize "levels.ui.addLevel"}}"></i>
         <i class="far fa-edit" data-tooltip="{{localize "levels.ui.editLevels"}}"></i>
         <i class="fas fa-map" data-tooltip="{{localize "levels.ui.getFromScene"}}"></i>
+        <i class="fas fa-cloud" data-tooltip="{{localize "levels.ui.fog"}}"></i>
         <i class="fas fa-trash" data-tooltip="{{localize "levels.ui.clearLevels"}}"></i>
     </div>
     </div>
